production/deploy/dashboard-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
      - args:
        - rq-dashboard
        - --port
        - "5555"
        - --redis-url
        - redis://redis:6379/0
        image: master-image
        name: dashboard
        ports:
        - containerPort: 5555
        resources: {}
      restartPolicy: Always
status: {}
