production/deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
     matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: reubenmathew/frontend-prod
        name: frontend
        ports:
        - containerPort: 8000
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: frontend
status:
  loadBalancer: {}
